test/tests/compiler/18_structures/invalid_types/extra_credit/union_type_declarations/member_name_conflicts.plx
#  You can't declare two members of the same union with the same name 
type union u(    a: i32    , a: i32    
    )

pub fn main(none) i32 {
    return 0
}
